<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/station_fragment"
    tools:context=".fragments.StationFragment"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/station_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="20dp"

        android:text="@string/station_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/branch_with_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/station_name_txt"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp">

        <ImageView
            android:id="@+id/branchLogo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/branch_logo"
            tools:src="@drawable/redbranchlogo" />

        <TextView

            android:id="@+id/branch_name_txt"
            android:layout_width="wrap_content"
            android:paddingHorizontal="20dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/branch_name" />
    </LinearLayout>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gallery_height"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingHorizontal="@dimen/gallery_peek"
                android:layout_marginVertical="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branch_with_logo" />

            <androidx.media3.ui.PlayerView
                android:id="@+id/audioPlayer"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="15dp"
                app:show_timeout="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gallery" />

            <!-- Video Player (добавлены параметры для лучшей работы) -->
            <androidx.media3.ui.PlayerView
                android:id="@+id/videoPlayer"
                android:layout_width="0dp"
                android:layout_height="100dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="12dp"
            android:keepScreenOn="true"
            app:surface_type="surface_view"
            app:show_buffering="when_playing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayer" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/places_nearby"
        android:paddingHorizontal="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoPlayer" />
            <TextView
                android:id="@+id/seeAllTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="См. все"
                android:paddingHorizontal="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/attractionsGallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/attractions_gallery_height"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingHorizontal="@dimen/gallery_peek"
                android:layout_marginVertical="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <TextView
                android:id="@+id/informationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"

                android:layout_marginTop="20dp"
                android:text="@string/station_information_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attractionsGallery" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"

                android:layout_marginTop="20dp"
                android:text="@string/station_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationTextView" />

            <TextView
                android:id="@+id/extraServicesTextView"
                android:layout_width="0dp"
                android:paddingHorizontal="20dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/extra_services_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <TextView
                android:paddingHorizontal="20dp"

                android:id="@+id/extraServicesInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/extra_services_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extraServicesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>