<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/reference_info_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="Справочная информация"
        android:textSize="28sp"
        android:textColor="#000000"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reference_info_working_hourse_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Время работы: "
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reference_info_title_txt" />

    <TextView
        android:id="@+id/reference_info_working_hourse_info_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/inter_regular"
        android:maxLines="3"
        android:text="с 5:30 утра до 1:00 ночи."
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_info_working_hourse_txt" />


    <TextView
        android:id="@+id/passengers_feedback_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_bold"
        android:text="Обратная связь с пассажирами"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_info_working_hourse_info_txt" />

    <TextView
        android:id="@+id/passengers_feedback_link_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_regular"
        android:autoLink="web"
        android:textAlignment="textStart"
        android:text="@string/contact_info_link_text"
        android:textColor="#DA2031"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passengers_feedback_txt" />
    <TextView
        android:id="@+id/phone_number_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"

        android:text="@string/phon_title"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passengers_feedback_link_txt" />
    <TextView
        android:id="@+id/phone_number_deatils_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:autoLink="web"
        android:textAlignment="textStart"
        android:textColor="#DA2031"
        android:textSize="16sp"

        android:text="@string/phone_number_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_txt" />
    <TextView
        android:id="@+id/phone_number_extra_deatils_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="5dp"

        android:text="3210 (с мобильного телефона)"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_deatils_txt" />
    <TextView
        android:id="@+id/online_support_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_bold"
        android:text="Онлайн поддержка"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_extra_deatils_txt" />
    <TextView
        android:id="@+id/alexandra_chat_bot_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:autoLink="web"
        android:textAlignment="textStart"
        android:textColor="#DA2031"
        android:textSize="16sp"

        android:text="@string/alexandra_chat_bot"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/online_support_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>