<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.AttractionFragment"

    android:padding="16dp">

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:textColor="#000000"
        android:text="@string/back_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/station_name_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/station_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_text" />

    <LinearLayout
        android:id="@+id/branch_with_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/station_name_txt_2">

        <ImageView
            android:id="@+id/branchLogo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/redbranchlogo"
             />

        <TextView
            android:id="@+id/branch_name_txt"
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/branch_name" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="250dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_panel"
        tools:listitem="@layout/list_item" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="28sp"

        android:text="Места рядом с вами"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch_with_logo" />
    <LinearLayout
        android:id="@+id/filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/filter_icon"
            android:layout_width="21dp"
            android:layout_height="12dp"
            tools:srcCompat="@drawable/vector" />

        <TextView
            android:id="@+id/by_price_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/inter_regular"

            android:text="По цене" />

        <TextView
            android:id="@+id/by_distance_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:fontFamily="@font/inter_regular"
            android:text="Ближайшие" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
