<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StationAttractionsFragment"
    android:background="#FFFFFF"

    android:padding="16dp">

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_regular"
        android:textColor="#000000"
        android:text="@string/back_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/station_attraction_station_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/inter_bold"
        android:text="@string/station_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_text" />

    <LinearLayout
        android:id="@+id/branch_with_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/station_attraction_station_name_txt">

        <ImageView
            android:id="@+id/stationAttractionBranchLogo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/redbranchlogo"
            />

        <TextView
            android:id="@+id/station_attraction_branch_name_txt"
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/colorCustomGrey"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/branch_name" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recyclerWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="@dimen/gallery_corner_radius"
        app:strokeWidth="0dp"
        app:cardBackgroundColor="@android:color/transparent"

        app:cardElevation="0dp"
    app:layout_constraintTop_toBottomOf="@+id/filter_panel"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attractionsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_station_attraction" />

</com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="28sp"
        android:textColor="@color/colorBlack"
        android:text="Места рядом с вами"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch_with_logo" />
    <LinearLayout
        android:id="@+id/filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/filter_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="0dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vector" />

        <TextView
            android:id="@+id/by_price_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/colorBlack"
            android:text="По цене" />

        <TextView
            android:id="@+id/by_distance_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"

            android:layout_marginStart="25dp"
            android:fontFamily="@font/inter_regular"
            android:text="Ближайшие" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
